--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ isort = "^5.13.2"
 pylint = "^3.1.0"
 pylint-pytest = "^1.1.7"
 
+[tool.poetry.group.ml.dependencies]
+torch = "2.0.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
