--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     ports:
       - 5771:8000
 
-    command: bash -c "poetry run uvicorn app:create_app --host 0.0.0.0 --port 8000"
+    command: bash -c "poetry run python ml/run.py" #"sleep 10000"
   
 networks:
   default:
