--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,18 +15,27 @@ services:
       - 7329:8000
 
     command: bash -c "poetry run uvicorn app:create_app --host 0.0.0.0 --port 8000"
-  # ml:
-  #   build:
-  #     context: .
-  #     dockerfile: docker/ml/Dockerfile
+  ml:
+    build:
+      context: .
+      dockerfile: docker/ml/Dockerfile
+    deploy: # nvidia settings
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
 
-  #   volumes:
-  #     # - ./volume/data:/usr/src/app/volume
-  #     - .:/usr/src/app/
-  #   ports:
-  #     - 5771:8000
+    volumes:
+      # - ./volume/data:/usr/src/app/volume
+      - .:/usr/src/app/
+    ports:
+      - 5771:8000
 
-  #   command: bash -c "sleep 10000" # "poetry run python ml/run.py" #"sleep 10000"
+    command: bash -c "sleep 1000000" # "poetry run python ml/run.py" #"sleep 10000"
   
 networks:
   default:
