--- a/docker/ml/Dockerfile
+++ b/docker/ml/Dockerfile
@@ -1,18 +1,25 @@
-FROM python:3.9
+FROM nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
+# already has python 3.10.12
 
+# Set the working directory
 RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
 
-RUN pip install -U pip && \
-    pip install poetry
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    git \
+    curl \
+    ca-certificates \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && rm -rf /var/lib/apt/lists/*
 
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PYTHONIOENCODING=utf-8
+# Install Python and pip
+RUN apt-get update && apt-get install -y python3-pip
 
-COPY pyproject.toml poetry.lock /usr/src/app/
+# Install PyTorch with CUDA support
+RUN pip3 install torch==2.0.1+cu118 torchvision==0.15.2+cu118 -f https://download.pytorch.org/whl/cu118/torch_stable.html
 
-RUN poetry config virtualenvs.create false && \
-    poetry install --no-root --no-interaction --no-ansi --only ml
 
-# COPY . /usr/src/app/
+COPY . /usr/src/app/
