--- a/docker/ml/Dockerfile
+++ b/docker/ml/Dockerfile
@@ -17,9 +17,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Install Python and pip
 RUN apt-get update && apt-get install -y python3-pip
-
+RUN python3 -m pip install poetry
 # Install PyTorch with CUDA support
-RUN pip3 install torch==2.0.1+cu118 torchvision==0.15.2+cu118 -f https://download.pytorch.org/whl/cu118/torch_stable.html
+# RUN pip3 install torch==2.0.1+cu118 torchvision==0.15.2+cu118 -f https://download.pytorch.org/whl/cu118/torch_stable.html
 
 
 COPY . /usr/src/app/
