--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ pylint = "^3.1.0"
 pylint-pytest = "^1.1.7"
 
 [tool.poetry.group.ml.dependencies]
-torch = "2.0.1"
-torchvision = "0.15.2"
+torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl"}
+torchvision = {url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp310-cp310-linux_x86_64.whl"}
 
 [build-system]
 requires = ["poetry-core"]
