--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+### ML ignore
+app/pkg/ml/weights
+
 ### VisualStudioCode template
 .vscode/*
 !.vscode/settings.json
@@ -122,6 +125,7 @@ DerivedData/
 pyvenv.cfg
 .venv
 pip-selfcheck.json
+virt-ward-env
 
 ### Emacs template
 # -*- mode: gitignore; -*-
