--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,15 @@ services:
     build:
       context: .
       dockerfile: docker/model/Dockerfile
+    deploy: # nvidia settings
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
 
     env_file:
       - .env
@@ -29,9 +38,10 @@ services:
       - rabbitmq
 
     volumes:
-      - ${DATA_VOLUME}:/usr/src/app/volume
+      # - ${DATA_VOLUME}:/usr/src/app/volume
+      - .:/usr/src/app/ # for dev
 
-    command: ["poetry", "run", "python3", "-m", "app.pkg.workers.model.main"]
+    command: ["tail", "-f", "/dev/null"] #["poetry", "run", "python3", "-m", "app.pkg.workers.model.main"]
 
   rabbitmq:
     container_name: wardrobe-rabbitmq
