--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,6 @@ LOGGER__LEVEL=INFO
 LOGGER__FOLDER_PATH=./volume/logs/logs.log
 
 # Filesystem
-API_FILESYSTEM_FOLDER=./volume/data/database
+API_FILESYSTEM_FOLDER=./volume/storage
 
 DATA_VOLUME=./volume
