human preprocessing added

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,6 @@ LOGGER__FOLDER_PATH=./volume/logs/logs.log
 API_FILESYSTEM_FOLDER=./volume/data/database
 
 DATA_VOLUME=./volume
+
+# ML
+ML__WEIGHTS_PATH=./app/pkg/ml/weights
