[+] Added not tested AWS.

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,13 @@ CLIENTS__WARDROBE_API__TOKEN=123
 LOGGER__LEVEL=INFO
 LOGGER__FOLDER_PATH=./volume/logs/logs.log
 
+# Amazon S3
+AWS__ACCESS_KEY_ID="secret-key-id"
+AWS__SECRET_ACCESS_KEY="secret-access-key"
+AWS__REGION_NAME="region"
+AWS__BUCKET_NAME="bucket"
+
+
 # Filesystem
 API_FILESYSTEM_FOLDER=./volume/storage
 
