--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requests = "^2.31.0"
 python-multipart = "^0.0.9"
 pydantic = {version = "^1.10.13", extras = ["dotenv"]}
 aio-pika = "^9.1.4"
+boto3 = "^1.34.65"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.2"
