[+] Added VK cloud.

--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,7 @@ LOGGER__FOLDER_PATH=./volume/logs/logs.log
 # Amazon S3
 AWS__ACCESS_KEY_ID="secret-key-id"
 AWS__SECRET_ACCESS_KEY="secret-access-key"
-AWS__REGION_NAME="region"
+AWS__ENDPOINT_URL="https://hb.ru-msk.vkcs.cloud"
 AWS__BUCKET_NAME="bucket"
 
 
