ml setup instructions add

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 app/pkg/ml/weights
 app/pkg/ml/try_on/preprocessing/openpose/images
 try_on_example.ipynb
+*.zip
+
 # app/pkg/ml/try_on/preprocessing/detectron/images
 
 
