--- a/docker/model/Dockerfile
+++ b/docker/model/Dockerfile
@@ -18,17 +18,22 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Install Python and pip
 RUN apt-get update && apt-get install -y python3-pip
 
-RUN pip3 install -U pip && \
-    pip3 install poetry
+RUN pip3 install -U pip 
+
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PYTHONIOENCODING=utf-8
 
-COPY pyproject.toml poetry.lock /usr/src/app/
 
-RUN poetry config virtualenvs.create true && \
-    poetry install --no-root --no-interaction --no-ansi 
+RUN pip3 install torch==2.0.1+cu118 torchvision==0.15.2+cu118 -f https://download.pytorch.org/whl/cu118/torch_stable.html
+
+
+RUN pip3 install 'git+https://github.com/facebookresearch/detectron2@main#subdirectory=projects/DensePose'
+
+COPY requirements.txt /usr/src/app/
+
+RUN pip3 install -r requirements.txt    
 
 # commented to guarantee sync volume changes
-# COPY . /usr/src/app/
+COPY . /usr/src/app/
