--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 opencv-python==4.7.0.72 
 diffusers==0.14.0
-transformers
+transformers==4.27.3
 scipy
 matplotlib
 scikit-image
 pillow
 ninja
 accelerate
+xformers==0.0.22
 
 fastapi
 uvicorn
