[+] Enums & setttings changed. R: Not tested.

--- a/.env.example
+++ b/.env.example
@@ -41,5 +41,6 @@ API_FILESYSTEM_FOLDER=./volume/storage
 
 # ML
 ML__WEIGHTS_PATH=./app/pkg/ml/weights
+ML__TRY_ON_DIR=try_on
 
 DATA_VOLUME=./volume
