--- a/.env.example
+++ b/.env.example
@@ -30,10 +30,10 @@ LOGGER__LEVEL=INFO
 LOGGER__FOLDER_PATH=./volume/logs/logs.log
 
 # Amazon S3
-AWS__ACCESS_KEY_ID="secret-key-id"
-AWS__SECRET_ACCESS_KEY="secret-access-key"
+AWS__ACCESS_KEY_ID=secret-key-id
+AWS__SECRET_ACCESS_KEY=secret-access-key
 AWS__ENDPOINT_URL="https://hb.ru-msk.vkcs.cloud"
-AWS__BUCKET_NAME="bucket"
+AWS__BUCKET_NAME=bucket
 
 
 # Filesystem
