moved weights folder to external

--- a/.env.example
+++ b/.env.example
@@ -40,7 +40,7 @@ AWS__BUCKET_NAME=bucket
 API_FILESYSTEM_FOLDER=./volume/storage
 
 # ML
-ML__WEIGHTS_PATH=./app/pkg/ml/weights
+ML__WEIGHTS_PATH=/usr/src/ml_weights
 ML__TRY_ON_DIR=try_on
 ML__CUT_DIR=cut
 
