autoset first commit

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ app/pkg/ml/weights
 app/pkg/ml/try_on/preprocessing/openpose/images
 try_on_example.ipynb
 *.zip
+data/
 
 ### VisualStudioCode template
 .vscode/*
