--- a/.env.example
+++ b/.env.example
@@ -48,7 +48,7 @@ ML__TRY_ON_TASK_QUEUE="try_on"
 ML__TRY_ON_RESPONSE_QUEUE="try_on_response"
 ML__CUT_TASK_QUEUE="cut"
 ML__CUT_RESPONSE_QUEUE="cut_response"
-ML__RECSYS_TASK_QUEUE="recsys"
-ML__RECSYS_RESPONSE_QUEUE="recsys_response"
+ML__OUTFIT_GEN_TASK_QUEUE="outfit_gen"
+ML__OUTFIT_GEN_RESPONSE_QUEUE="outfit_gen_response"
 
 DATA_VOLUME=./volume
