--- a/docker-compose-model.yml
+++ b/docker-compose-model.yml
@@ -2,8 +2,62 @@ version: "3.8"
 
 services:
 
-  cut-model:
-    container_name: cut-model
+  # cut-model:
+  #   container_name: cut-model
+    
+  #   restart: unless-stopped
+
+  #   build:
+  #     context: .
+  #     dockerfile: docker/model/Dockerfile
+  #   deploy: # nvidia settings
+  #     resources:
+  #       reservations:
+  #         devices:
+  #           - driver: nvidia
+  #          #   count: 1
+  #             capabilities: [gpu]
+  #   environment:
+  #     - NVIDIA_VISIBLE_DEVICES=all
+
+  #   env_file:
+  #     - .env
+
+  #   volumes:
+  #     - ${DATA_VOLUME}:/usr/src/app/volume
+  #     - ${ML__WEIGHTS_PATH}:${ML__WEIGHTS_PATH}
+
+  #   command: ["python3", "-m", "app.pkg.workers.cut.main"]
+
+  # try-on-model:
+  #   container_name: try-on-model
+    
+  #   restart: unless-stopped
+
+  #   build:
+  #     context: .
+  #     dockerfile: docker/model/Dockerfile
+  #   deploy: # nvidia settings
+  #     resources:
+  #       reservations:
+  #         devices:
+  #           - driver: nvidia
+  #          #   count: 1
+  #             capabilities: [gpu]
+  #   environment:
+  #     - NVIDIA_VISIBLE_DEVICES=all
+
+  #   env_file:
+  #     - .env
+
+  #   volumes:
+  #     - ${DATA_VOLUME}:/usr/src/app/volume
+  #     - ${ML__WEIGHTS_PATH}:${ML__WEIGHTS_PATH}
+
+  #   command: ["python3", "-m", "app.pkg.workers.try_on.main"]
+
+  outfit-gen-model:
+    container_name: outfit-gen-model
     
     restart: unless-stopped
 
@@ -27,34 +81,8 @@ services:
       - ${DATA_VOLUME}:/usr/src/app/volume
       - ${ML__WEIGHTS_PATH}:${ML__WEIGHTS_PATH}
 
-    command: ["python3", "-m", "app.pkg.workers.cut.main"]
+    command: ["python3", "-m", "app.pkg.workers.outfit_gen.main"]
 
-  try-on-model:
-    container_name: try-on-model
-    
-    restart: unless-stopped
-
-    build:
-      context: .
-      dockerfile: docker/model/Dockerfile
-    deploy: # nvidia settings
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-           #   count: 1
-              capabilities: [gpu]
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=all
-
-    env_file:
-      - .env
-
-    volumes:
-      - ${DATA_VOLUME}:/usr/src/app/volume
-      - ${ML__WEIGHTS_PATH}:${ML__WEIGHTS_PATH}
-
-    command: ["python3", "-m", "app.pkg.workers.try_on.main"]
 
 networks:
   default:
