--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,7 @@ CUT_DIR=cut
 
 # ML
 ML__WEIGHTS_PATH=/usr/src/ml_weights
+ML__META_SAVE=./volume/ml_meta
 
 ML__TRY_ON_TASK_QUEUE="try_on"
 ML__TRY_ON_RESPONSE_QUEUE="try_on_response"
