--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,20 @@ API__PORT=8000
 API__TRUSTED='*'
 API__X_ACCESS_TOKEN=123
 
+# POSTGRES
+RESOURCES__POSTGRES__HOST=postgres_test
+RESOURCES__POSTGRES__PORT=5432
+RESOURCES__POSTGRES__DATABASE_NAME={{POSTGRES_DATABASE_NAME}}
+RESOURCES__POSTGRES__USER={{POSTGRES_USER}}
+RESOURCES__POSTGRES__PASSWORD={{POSTGRES_PASSWORD}}
+RESOURCES__POSTGRES__MIN_CONNECTION=100
+RESOURCES__POSTGRES__MAX_CONNECTION=1000
+
 # RABBIT
 RESOURCES__RABBITMQ__HOST=rabbitmq
 RESOURCES__RABBITMQ__PORT=5672
-RESOURCES__RABBITMQ__USER=usr
-RESOURCES__RABBITMQ__PASSWORD=123
+RESOURCES__RABBITMQ__USER={{RABBIT_USER}}
+RESOURCES__RABBITMQ__PASSWORD={{RABBIT_PASSWORD}}
 RESOURCES_RABBIT_DATA_VOLUME=./volume/rabbitmq
 
 # Logger
