--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ python-multipart = "^0.0.9"
 pydantic = {version = "^1.10.13", extras = ["dotenv"]}
 aio-pika = "^9.1.4"
 boto3 = "^1.34.65"
+sqlalchemy = "^2.0.29"
+asyncpg = "^0.28.0"
+
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.3.2"
