[+] Added recsys model.

--- a/.env.example
+++ b/.env.example
@@ -51,5 +51,7 @@ ML__CUT_TASK_QUEUE="cut"
 ML__CUT_RESPONSE_QUEUE="cut_response"
 ML__OUTFIT_GEN_TASK_QUEUE="outfit_gen"
 ML__OUTFIT_GEN_RESPONSE_QUEUE="outfit_gen_response"
+ML__RECSYS_TASK_QUEUE="recsys"
+ML__RECSYS_RESPONSE_QUEUE="recsys_response"
 
 DATA_VOLUME=./volume
