[~] Addded IS_CUT_LIGHT_WEIGHT.

--- a/.env.example
+++ b/.env.example
@@ -55,4 +55,9 @@ ML__OUTFIT_GEN_RESPONSE_QUEUE="outfit_gen_response"
 ML__RECSYS_TASK_QUEUE="recsys"
 ML__RECSYS_RESPONSE_QUEUE="recsys_response"
 
+# Config models
+# if True, cut model requires ~ 1 GB GPU of memory
+# if False, cut model requires ~ 8 GB GPU of memory
+ML__IS_CUT_LIGHT_WEIGHT=False
+
 DATA_VOLUME=./volume
